k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-notes
  labels:
    name: secure-notes
