k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-backend
  labels:
    app.kubernetes.io/name: notes-backend
    tier: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-backend
  template:
    metadata:
      labels:
        app: notes-backend
        tier: api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: backend
          image: ghcr.io/rahmatullah7866/devsecops-fullstack-portfolio-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /api/notes/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/notes/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: notes-backend
  labels:
    app.kubernetes.io/name: notes-backend
spec:
  type: ClusterIP
  selector:
    app: notes-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
